* Update to async-profiler 1.8.7 and set configured `safemode` at load time though a new system property - {pull}2165[#2165]
* Added support to capture `context.message.routing-key` in rabbitmq, spring amqp instrumentations - {pull}1767[#1767]
* Breakdown metrics are now tracked per service (when using APM Server 8.0) - {pull}2208[#2208]
* Add support for Spring AMQP batch API - {pull}1716[#1716]

[float]
===== Performance improvements
* Disable compression when sending data to a local APM Server

[float]
===== Bug fixes
* Fix k8s metadata discovery for containerd-cri envs - {pull}2126[#2126]
* Fixing/reducing startup delays related to `ensureInstrumented` - {pull}2150[#2150]
* Fix runtime attach when bytebuddy is in application classpath - {pull}2116[#2116]
* Fix failed integration between agent traces and host metrics coming from Beats/Elastic-Agent due to incorrect hostname
discovery - {pull}2205[#2205]
* Fix infinitely kept-alive transactions in Hikari connection pool - {pull}2210[#2210]
* Fix few Webflux exceptions and missing reactor module - {pull}2207[#2207]

[float]
===== Refactorings
* Loading the agent from an isolated class loader - {pull}2109[#2109]
* Refactorings in the `apm-agent-plugin-sdk` that may imply breaking changes for beta users of the external plugin mechanism
** `WeakMapSupplier.createMap()` is now `WeakConcurrent.buildMap()` and contains more builders - {pull}2136[#2136]
** `GlobalThreadLocal` has been removed in favor of `DetachedThreadLocal`. To make it global, use `GlobalVariables` - {pull}2136[#2136]
** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
** The `@AssignTo.*` annotations have been removed.
   Use the `@Advice.AssignReturned.*` annotations that come with the latest version of Byte Buddy.
   If your plugin uses the old annotations, it will be skipped.
   {pull}2171[#2171]