@@ -43,6 +43,7 @@ by the agent may be different. This was done in order to improve the integration
 * Added support to capture `context.message.routing-key` in rabbitmq, spring amqp instrumentations - {pull}1767[#1767]
 * Breakdown metrics are now tracked per service (when using APM Server 8.0) - {pull}2208[#2208]
 * Add support for Spring AMQP batch API - {pull}1716[#1716]
+* Add the (current) transaction name to the error (when using APM Server 8.0) - {pull}2235[#2235]
 
 [float]
 ===== Performance improvements
